# POPGP

./: .gitignore  POPGP.code-workspace  README.md  pyproject.toml
.cursor/rules/: framework_rules.mdc
docs/: framework.md  hybrid_ai_whitepaper.md  questions_engine.md  simulation_engine_whitepaper.md  tasks_engine.md  validation_report_v0.12.md
popgp/: __init__.py  engine.py
popgp_engine/: CMakeLists.txt  build.bat  build.sh  vcpkg.json
popgp_engine/kernel/: CMakeLists.txt  README.md  vcpkg.json
popgp_engine/kernel/include/: types.cuh
popgp_engine/kernel/python/: popgp.py
popgp_engine/kernel/src/: area_law.cu  clock.cu  main.cpp  phase_flow.cu
popgp_engine/kernel/tests/: test_area_law.cu  test_phase_flow.cu
popgp_engine/renderer/: CMakeLists.txt  README.md
popgp_engine/renderer/include/: embedding.h  regge.h
popgp_engine/renderer/src/: embedding.cu  regge.cu
src/: README.md  README_2D.md  README_CA.md  ca_model.md  ca_model.py  chain_1d_stability.md  chain_1d_stability.py  demo_engine_1d.py  grid_2d.md  grid_2d.py  main.py
src/native/ca_model/: ca_model_native.md  ca_model_native.py
src/native/chain_1d/: chain_1d_native.md  chain_1d_native.py
src/native/grid_2d/: grid_2d_native.md  grid_2d_native.py
src/toy/ca_model/: ca_model.md  ca_model.py
src/toy/chain_1d/: chain_1d_stability.md  chain_1d_stability.py
src/toy/grid_2d/: grid_2d.md  grid_2d.py
