[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popgp"
version = "0.1.0"
description = "Phase-Ordered Pre-Geometric Projection framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "quimb",
    "autoray",
    "cotengra",
]

[tool.hatch.build.targets.wheel]
packages = ["popgp"]
